# infrastructure/routes.php
@@ -9,7 +9,11 @@ use Slim\Routing\RouteCollectorProxy;
 
 return function (App $app) {
     $app->group('/api', function (RouteCollectorProxy $group) {
-        $group->get('/categorias', [CategoriaController::class, 'categorias']);
+        $group->group('/categorias', function (RouteCollectorProxy $group) {
+            $group->get('/lista', [CategoriaController::class, 'lista']);
+            $group->delete('/remover', [CategoriaController::class, 'remover']);
+        });
+
         $group->group('/carros', function (RouteCollectorProxy $group) {
             $group->get('/lista', [CarroController::class, 'lista']);
             $group->get('/modelos', [CarroController::class, 'modelos']);
@@ -22,5 +26,9 @@ return function (App $app) {
         $response->getBody()->write($swaggerJson);
 
         return $response->withHeader('Content-Type', 'application/json');
+    });
+
+    $app->options('/{routes:.+}', function ($request, $response) {
+        return $response;
     });
 };
